<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLocalName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLocalName"
            android:layout_marginLeft="10dp" />

        <AutoCompleteTextView
            android:id="@+id/edtLocalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:textColor="#000000"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/txtLocalCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLocalCategory"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp" />

        <Spinner
            android:id="@+id/spnLocalCategory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/spnLocalCategory"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/txtGlobalPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGlobalPosition"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/content"
        android:layout_marginTop="10dp"/>

    <LinearLayout
        android:id="@+id/latitudeArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/txtGlobalPosition"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtLatitude"/>
        <TextView
            android:id="@+id/txtLatitudeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitudeArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/latitudeArea"
        android:layout_marginLeft="10dp">

        <TextView
            android:id="@+id/txtLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtLongitude"/>
        <TextView
            android:id="@+id/txtLongitudeResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/longitudeArea"
        android:layout_marginTop="40dp"
        android:text="@string/btnCheckin"
        android:onClick="onClickCheckIn"/>
</RelativeLayout>